add html boilerplate and starter files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Code icons created by Icongeek26 - Flaticon -->
+    <link rel="shortcut icon" type="image/png" href="img/web-programming.png">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Don Reniff &mdash; Full Stack Web Developer</title>
+</head>
+<body class="container">
+    
+</body>
+</html>
