add html markup for overall structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,62 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Don Reniff &mdash; Full Stack Web Developer</title>
 </head>
+
 <body class="container">
-    
+
+    <!-- NAVBAR -->
+    <header>
+        <nav class="navbar">
+            <img src="" alt="Site logo" class="navbar__logo"><button class="navbar__btn"></button>
+            <div class="navbar__menu"></div>
+        </nav>
+    </header>
+
+    <main>
+
+        <!-- HOME -->
+        <section class="home">
+            <div class="home__data">Home Data</div>
+            <div class="home__social"><a href="#">Home Contact</a></div>
+            <div class="home__img">Home Image</div>
+        </section>
+
+        <!-- ABOUT -->
+        <section class="about">
+            <h2 class="section-title">About title</h2>
+            <div class="about__container">
+                <img src="" alt="">
+                <p class="about__text"></p>
+            </div>
+        </section>
+
+        <!-- SKILLS -->
+        <section class="skills">
+            <h2 class="section-title">Skills title</h2>
+            <div class="skills__container">
+
+            </div>
+        </section>
+
+        <!-- PROJECTS -->
+        <div class="projects">
+            <h2 class="section-title">Projects title</h2>
+
+            <div class="project">
+                <h4 class="project__title">Project 1</h4>
+                <p class="project__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde.</p>
+                <a href="#" class="project__link">Learn more</a>
+                <img src="" alt="Project image 1" class="project__img">
+            </div>
+
+        </div>
+
+    </main>
+
+    <!-- CONTACT -->
+    <footer class="contact">
+        Contact me
+    </footer>
+
 </body>
 </html>
