--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
     <!-- Code icons created by Icongeek26 - Flaticon -->
     <link rel="shortcut icon" type="image/png" href="img/web-programming.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pangolin">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="css/style.css">
     <title>Don Reniff &mdash; Full Stack Web Developer</title>
 </head>
