add logo to navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <!-- NAVBAR -->
     <header>
         <nav class="navbar">
-            <img src="" alt="Site logo" class="navbar__logo"><button class="navbar__btn"></button>
+            <!-- Web development icons created by surang - Flaticon -->
+            <img src="img/coding.png" alt="Site logo" class="navbar__logo">
+            <button class="navbar__btn"></button>
             <div class="navbar__menu"></div>
         </nav>
     </header>
