add dark mode button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <nav class="navbar">
             <!-- Web development icons created by surang - Flaticon -->
             <img src="img/coding.png" alt="Site logo" class="navbar__logo">
-            <button class="navbar__btn"></button>
+            <button class="navbar__btn">
+                <!-- Sunglasses icons created by Rohim - Flaticon -->
+                <img src="img/sunglasses.png" alt="Dark/light mode button">
+            </button>
             <div class="navbar__menu"></div>
         </nav>
     </header>
