add navbar menu links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,23 @@
                 <!-- Sunglasses icons created by Rohim - Flaticon -->
                 <img src="img/sunglasses.png" alt="Dark/light mode button">
             </button>
-            <div class="navbar__menu"></div>
+            <ul class="navbar__menu">
+                <li class="navbar__menu--item">
+                    <a href="" class="navbar__menu--link">Home</a>
+                </li>
+                <li class="navbar__menu--item">
+                    <a href="" class="navbar__menu--link">About</a>
+                </li>
+                <li class="navbar__menu--item">
+                    <a href="" class="navbar__menu--link">Skills</a>
+                </li>
+                <li class="navbar__menu--item">
+                    <a href="" class="navbar__menu--link">Projects</a>
+                </li>
+                <li class="navbar__menu--item">
+                    <a href="" class="navbar__menu--link">Contact</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
