add styles to navbar and position nav elements

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <header>
         <nav class="navbar">
             <!-- Web development icons created by surang - Flaticon -->
-            <img src="img/coding.png" alt="Site logo" class="navbar__logo">
-            <button class="navbar__btn">
+            <img src="img/coding.png" alt="Site logo" class="navbar__logo dark-mode">
+            <button class="navbar__btn dark-mode">
                 <!-- Sunglasses icons created by Rohim - Flaticon -->
                 <img src="img/sunglasses.png" alt="Dark/light mode button">
             </button>
