--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
                 <img src="img/sunglasses.png" alt="Dark/light mode button">
             </button>
             <ul class="navbar__menu">
-                <li class="navbar__menu--item">
-                    <a href="" class="navbar__menu--link">Home</a>
+                <li class="navbar__menu-item">
+                    <a href="" class="navbar__menu-link active">Home</a>
                 </li>
-                <li class="navbar__menu--item">
-                    <a href="" class="navbar__menu--link">About</a>
+                <li class="navbar__menu-item">
+                    <a href="" class="navbar__menu-link">About</a>
                 </li>
-                <li class="navbar__menu--item">
-                    <a href="" class="navbar__menu--link">Skills</a>
+                <li class="navbar__menu-item">
+                    <a href="" class="navbar__menu-link">Skills</a>
                 </li>
-                <li class="navbar__menu--item">
-                    <a href="" class="navbar__menu--link">Projects</a>
+                <li class="navbar__menu-item">
+                    <a href="" class="navbar__menu-link">Projects</a>
                 </li>
-                <li class="navbar__menu--item">
-                    <a href="" class="navbar__menu--link">Contact</a>
+                <li class="navbar__menu-item">
+                    <a href="" class="navbar__menu-link">Contact</a>
                 </li>
             </ul>
         </nav>
