add dark-mode selector styles

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <title>Don Reniff &mdash; Full Stack Web Developer</title>
 </head>
 
-<body class="container">
+<body class="container dark-mode">
 
     <!-- NAVBAR -->
     <header>
         <nav class="navbar">
             <!-- Web development icons created by surang - Flaticon -->
-            <img src="img/coding.png" alt="Site logo" class="navbar__logo dark-mode">
-            <button class="navbar__btn dark-mode">
+            <img src="img/coding.png" alt="Site logo" class="navbar__logo">
+            <button class="navbar__btn">
                 <!-- Sunglasses icons created by Rohim - Flaticon -->
                 <img src="img/sunglasses.png" alt="Dark/light mode button">
             </button>
