add functionality to dark mode button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pangolin">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="css/style.css">
+    <script src="script.js" defer></script>
     <title>Don Reniff &mdash; Full Stack Web Developer</title>
 </head>
 
