add jumps to page sections to nav anchors

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             </button>
             <ul class="navbar__menu">
                 <li class="navbar__menu-item">
-                    <a href="" class="navbar__menu-link active">Home</a>
+                    <a href="#home" class="navbar__menu-link active">Home</a>
                 </li>
                 <li class="navbar__menu-item">
-                    <a href="" class="navbar__menu-link">About</a>
+                    <a href="#about" class="navbar__menu-link">About</a>
                 </li>
                 <li class="navbar__menu-item">
-                    <a href="" class="navbar__menu-link">Skills</a>
+                    <a href="#skills" class="navbar__menu-link">Skills</a>
                 </li>
                 <li class="navbar__menu-item">
-                    <a href="" class="navbar__menu-link">Projects</a>
+                    <a href="#projects" class="navbar__menu-link">Projects</a>
                 </li>
                 <li class="navbar__menu-item">
-                    <a href="" class="navbar__menu-link">Contact</a>
+                    <a href="#contact" class="navbar__menu-link">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -48,14 +48,14 @@
     <main>
 
         <!-- HOME -->
-        <section class="home">
+        <section class="home" id="home">
             <div class="home__data">Home Data</div>
             <div class="home__social"><a href="#">Home Contact</a></div>
             <div class="home__img">Home Image</div>
         </section>
 
         <!-- ABOUT -->
-        <section class="about">
+        <section class="about" id="about">
             <h2 class="section-title">About title</h2>
             <div class="about__container">
                 <img src="" alt="">
@@ -64,7 +64,7 @@
         </section>
 
         <!-- SKILLS -->
-        <section class="skills">
+        <section class="skills" id="skills">
             <h2 class="section-title">Skills title</h2>
             <div class="skills__container">
 
@@ -72,7 +72,7 @@
         </section>
 
         <!-- PROJECTS -->
-        <div class="projects">
+        <div class="projects" id="projects">
             <h2 class="section-title">Projects title</h2>
 
             <div class="project">
@@ -87,7 +87,7 @@
     </main>
 
     <!-- CONTACT -->
-    <footer class="contact">
+    <footer class="contact" id="contact">
         Contact me
     </footer>
 
