place glitch text in home section

--- a/index.html
+++ b/index.html
@@ -49,8 +49,17 @@
 
         <!-- HOME -->
         <section class="home" id="home">
-            <div class="home__data">Home Data</div>
-            <div class="home__social"><a href="#">Home Contact</a></div>
+            <div class="home__data">
+                <p class="glitch">
+                    <span aria-hidden="true">Hello World, I'm Don</span>
+                    Hello World, I'm Don
+                    <span aria-hidden="true">Hello World, I'm Don</span>
+                </p>
+                <div class="typewriter">
+                    <div class="text"></div>
+                    <div class="cursor"></div>
+                </div>
+            </div>
             <div class="home__img">Home Image</div>
         </section>
 
