add JS functions for typewriter effect

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <span aria-hidden="true">Hello World, I'm Don</span>
                 </p>
                 <div class="typewriter">
-                    <div class="text">Web Developer</div>
+                    <div class="text"></div>
                     <div class="cursor"></div>
                 </div>
             </div>
