add personal image and curtain animation

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                     <div class="cursor"></div>
                 </div>
             </div>
-            <div class="home__img">Home Image</div>
+            <div class="home__img">
+                <img src="img/self.JPG" alt="My picture">
+            </div>
         </section>
 
         <!-- ABOUT -->
