add anchor links and logo images to social

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                     <div class="text"></div>
                     <div class="cursor"></div>
                 </div>
+
+                <div class="home__social">
+                    <a href="https://github.com/dreniff3">
+                        <img src="img/GitHub_Logo.png" alt="Github logo">
+                    </a>
+                    <a href="https://www.linkedin.com/in/don-reniff-388106235/">
+                        <img src="img/LinkedIn_Logo.png" alt="LinkedIn logo" class="linkedin-logo">
+                    </a>
+                </div>
             </div>
             <div class="home__img">
                 <img src="img/self.JPG" alt="My picture">
