position and style about section title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Code icons created by Icongeek26 - Flaticon -->
     <link rel="shortcut icon" type="image/png" href="img/web-programming.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pangolin">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,700">
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js" defer></script>
     <title>Don Reniff &mdash; Full Stack Web Developer</title>
@@ -49,12 +49,15 @@
 
         <!-- HOME -->
         <section class="home" id="home">
+
             <div class="home__data">
+
                 <p class="glitch">
                     <span aria-hidden="true">Hello World, I'm Don</span>
                     Hello World, I'm Don
                     <span aria-hidden="true">Hello World, I'm Don</span>
                 </p>
+
                 <div class="typewriter">
                     <div class="text"></div>
                     <div class="cursor"></div>
@@ -68,15 +71,18 @@
                         <img src="img/LinkedIn_Logo.png" alt="LinkedIn logo" class="linkedin-logo">
                     </a>
                 </div>
+
             </div>
+
             <div class="home__img">
                 <img src="img/self.JPG" alt="My picture">
             </div>
+
         </section>
 
         <!-- ABOUT -->
         <section class="about" id="about">
-            <h2 class="section-title">About title</h2>
+            <h2 class="section-title">About</h2>
             <div class="about__container">
                 <img src="" alt="">
                 <p class="about__text"></p>
