position and style about section

--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
         <section class="about" id="about">
             <h2 class="section-title">About</h2>
             <div class="about__container">
-                <img src="" alt="">
-                <p class="about__text"></p>
+                <img src="img/self-3.JPG" alt="My other picture">
+                <p class="body-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, accusamus, ad necessitatibus impedit quaerat vitae placeat earum dignissimos eum laborum, quo consequatur. Fuga architecto laudantium exercitationem ad quibusdam perferendis voluptatem?
+                </p>
             </div>
         </section>
 
@@ -103,7 +105,7 @@
 
             <div class="project">
                 <h4 class="project__title">Project 1</h4>
-                <p class="project__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde.</p>
+                <p class="body-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde.</p>
                 <a href="#" class="project__link">Learn more</a>
                 <img src="" alt="Project image 1" class="project__img">
             </div>
