--- a/index.html
+++ b/index.html
@@ -93,8 +93,30 @@
 
         <!-- SKILLS -->
         <section class="skills" id="skills">
-            <h2 class="section-title">Skills title</h2>
+            <h2 class="section-title">Skills</h2>
             <div class="skills__container">
+
+                <div class="skills__row-1">
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title"></h3>
+                    </div>
+                    <div class="skills__item"></div>
+                    <div class="skills__item"></div>
+                </div>
+
+                <div class="skills__row-2">
+                    <div class="skills__item"></div>
+                    <div class="skills__item"></div>
+                    <div class="skills__item"></div>
+                    <div class="skills__item"></div>
+                </div>
+
+                <div class="skills__row-3">
+                    <div class="skills__item"></div>
+                    <div class="skills__item"></div>
+                    <div class="skills__item"></div>
+                </div>
 
             </div>
         </section>
