--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" type="image/png" href="img/web-programming.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pangolin">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600">
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js" defer></script>
     <title>Don Reniff &mdash; Full Stack Web Developer</title>
@@ -99,23 +100,50 @@
                 <div class="skills__row-1">
                     <div class="skills__item">
                         <img src="" alt="">
-                        <h3 class="item-title"></h3>
+                        <h3 class="item-title">Python</h3>
                     </div>
-                    <div class="skills__item"></div>
-                    <div class="skills__item"></div>
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title">Git</h3>
+                    </div>
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title">MongoDB</h3>
+                    </div>
                 </div>
 
                 <div class="skills__row-2">
-                    <div class="skills__item"></div>
-                    <div class="skills__item"></div>
-                    <div class="skills__item"></div>
-                    <div class="skills__item"></div>
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title">JavaScript</h3>
+                    </div>
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title">React</h3>
+                    </div>
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title">Node.JS</h3>
+                    </div>
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title">Express.JS</h3>
+                    </div>
                 </div>
 
                 <div class="skills__row-3">
-                    <div class="skills__item"></div>
-                    <div class="skills__item"></div>
-                    <div class="skills__item"></div>
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title">HTML</h3>
+                    </div>
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title">CSS</h3>
+                    </div>
+                    <div class="skills__item">
+                        <img src="" alt="">
+                        <h3 class="item-title">Sass</h3>
+                    </div>
                 </div>
 
             </div>
