add and style skills logos

--- a/index.html
+++ b/index.html
@@ -99,49 +99,49 @@
 
                 <div class="skills__row-1">
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/python-logo.png" alt="Python logo">
                         <h3 class="item-title">Python</h3>
                     </div>
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/git-logo.png" alt="Git logo">
                         <h3 class="item-title">Git</h3>
                     </div>
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/mongo-logo.png" alt="MongoDB logo">
                         <h3 class="item-title">MongoDB</h3>
                     </div>
                 </div>
 
                 <div class="skills__row-2">
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/javascript-logo.png" alt="JavaScript logo">
                         <h3 class="item-title">JavaScript</h3>
                     </div>
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/react-logo.png" alt="React logo">
                         <h3 class="item-title">React</h3>
                     </div>
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/node-logo.png" alt="Node.js logo">
                         <h3 class="item-title">Node.JS</h3>
                     </div>
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/express-logo.png" alt="Express logo">
                         <h3 class="item-title">Express.JS</h3>
                     </div>
                 </div>
 
                 <div class="skills__row-3">
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/html-logo.png" alt="HTML logo">
                         <h3 class="item-title">HTML</h3>
                     </div>
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/css-logo.png" alt="CSS logo">
                         <h3 class="item-title">CSS</h3>
                     </div>
                     <div class="skills__item">
-                        <img src="" alt="">
+                        <img src="img/sass-logo.png" alt="Sass logo">
                         <h3 class="item-title">Sass</h3>
                     </div>
                 </div>
