--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/png" href="img/web-programming.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pangolin">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js" defer></script>
     <title>Don Reniff &mdash; Full Stack Web Developer</title>
