finish styles and animations for skills items

--- a/index.html
+++ b/index.html
@@ -97,22 +97,26 @@
             <h2 class="section-title">Skills</h2>
             <div class="skills__container">
 
-                <div class="skills__row-1">
+                <div class="skills__col-1">
                     <div class="skills__item">
                         <img src="img/python-logo.png" alt="Python logo">
                         <h3 class="item-title">Python</h3>
+                    </div>
+                    <div class="skills__item">
+                        <img src="img/c-logo.png" alt="C logo">
+                        <h3 class="item-title">C</h3>
                     </div>
                     <div class="skills__item">
                         <img src="img/git-logo.png" alt="Git logo">
                         <h3 class="item-title">Git</h3>
                     </div>
                     <div class="skills__item">
-                        <img src="img/mongo-logo.png" alt="MongoDB logo">
-                        <h3 class="item-title">MongoDB</h3>
+                        <img src="img/flask-logo.png" alt="Flask logo">
+                        <h3 class="item-title">Flask</h3>
                     </div>
                 </div>
 
-                <div class="skills__row-2">
+                <div class="skills__col-2">
                     <div class="skills__item">
                         <img src="img/javascript-logo.png" alt="JavaScript logo">
                         <h3 class="item-title">JavaScript</h3>
@@ -131,7 +135,7 @@
                     </div>
                 </div>
 
-                <div class="skills__row-3">
+                <div class="skills__col-3">
                     <div class="skills__item">
                         <img src="img/html-logo.png" alt="HTML logo">
                         <h3 class="item-title">HTML</h3>
@@ -143,6 +147,10 @@
                     <div class="skills__item">
                         <img src="img/sass-logo.png" alt="Sass logo">
                         <h3 class="item-title">Sass</h3>
+                    </div>
+                    <div class="skills__item">
+                        <img src="img/mongo-logo.png" alt="MongoDB logo">
+                        <h3 class="item-title">MongoDB</h3>
                     </div>
                 </div>
 
