add hover animation to skills items

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h2 class="section-title">Skills</h2>
             <div class="skills__container">
 
-                <div class="skills__col-1">
+                <div class="skills__col skills__col-1">
                     <div class="skills__item">
                         <img src="img/python-logo.png" alt="Python logo">
                         <h3 class="item-title">Python</h3>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
 
-                <div class="skills__col-2">
+                <div class="skills__col skills__col-2">
                     <div class="skills__item">
                         <img src="img/javascript-logo.png" alt="JavaScript logo">
                         <h3 class="item-title">JavaScript</h3>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
 
-                <div class="skills__col-3">
+                <div class="skills__col skills__col-3">
                     <div class="skills__item">
                         <img src="img/html-logo.png" alt="HTML logo">
                         <h3 class="item-title">HTML</h3>
