add reveal on scroll selector and function

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </section>
 
         <!-- ABOUT -->
-        <section class="about" id="about">
+        <section class="about reveal" id="about">
             <h2 class="section-title">About</h2>
             <div class="about__container">
                 <img src="img/self-3.JPG" alt="My other picture">
@@ -93,7 +93,7 @@
         </section>
 
         <!-- SKILLS -->
-        <section class="skills" id="skills">
+        <section class="skills reveal" id="skills">
             <h2 class="section-title">Skills</h2>
             <div class="skills__container">
 
@@ -158,7 +158,7 @@
         </section>
 
         <!-- PROJECTS -->
-        <div class="projects" id="projects">
+        <div class="projects reveal" id="projects">
             <h2 class="section-title">Projects title</h2>
 
             <div class="project">
