consolidate typographic styles

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         <!-- PROJECTS -->
         <div class="projects reveal" id="projects">
-            <h2 class="section-title">Projects title</h2>
+            <h2 class="section-title">Projects</h2>
 
             <div class="project">
                 <h4 class="project__title">Project 1</h4>
