--- a/index.html
+++ b/index.html
@@ -161,13 +161,39 @@
         <div class="projects reveal" id="projects">
             <h2 class="section-title">Projects</h2>
 
-            <div class="project">
-                <h4 class="project__title">Project 1</h4>
-                <p class="body-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde.</p>
-                <a href="#" class="project__link">Learn more</a>
-                <img src="" alt="Project image 1" class="project__img">
-            </div>
+            <div class="projects__container">
 
+                <div class="project">
+                    <div class="project__data">
+                        <h4 class="project-title">Battleship</h4>
+                        <div class="project-stack">
+                            <span class="project-stack__item">Python</span>
+                        </div>
+                        <p class="project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde.</p>
+                        <a href="#" class="project__link">Learn more</a>
+                    </div>
+
+                    <div class="project__image">
+                        <img src="img/battleship.png" alt="Project image 1" class="project__img">
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="project__data">
+                        <h4 class="project-title">Battleship</h4>
+                        <div class="project-stack">
+                            <span class="project-stack__item">Python</span>
+                        </div>
+                        <p class="project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde.</p>
+                        <a href="#" class="project__link">Learn more</a>
+                    </div>
+
+                    <div class="project__image">
+                        <img src="img/battleship.png" alt="Project image 1" class="project__img">
+                    </div>
+                </div>
+
+            </div>
         </div>
 
     </main>
