change project img alt

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     </div>
 
                     <div class="project__image">
-                        <img src="img/battleship.png" alt="Project image 1" class="project__img">
+                        <img src="img/battleship.png" alt="Battleship project img" class="project__img">
                     </div>
                 </div>
 
