style project pseudo elements

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                 <div class="project">
                     <div class="project__data">
-                        <h4 class="project-title">Battleship</h4>
+                        <h4 class="project-title">Battleship <a href="https://github.com/dreniff3/python-battleship-with-gui"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
                         <div class="project-stack">
                             <span class="project-stack__item">Python</span>
                         </div>
