finish styles for dark mode projects

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <div class="project-stack">
                             <span class="project-stack__item">Python</span>
                         </div>
-                        <p class="project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde.</p>
+                        <p class="project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, rem. Reprehenderit cum at illo, tempore, voluptatibus veniam unde dolores ratione cupiditate impedit et explicabo rem quis minus animi in. Similique!</p>
                         <a href="#" class="project__link">Learn more</a>
                     </div>
 
@@ -182,9 +182,14 @@
                     <div class="project__data">
                         <h4 class="project-title">Battleship <a href="https://github.com/dreniff3/python-battleship-with-gui"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
                         <div class="project-stack">
-                            <span class="project-stack__item">Python</span>
+                            <span class="project-stack__item">HTML</span>
+                            <span class="project-stack__item">Sass</span>
+                            <span class="project-stack__item">JavaScript</span>
+                            <span class="project-stack__item">React</span>
+                            <span class="project-stack__item">Express.js</span>
+                            <span class="project-stack__item">MongoDB</span>
                         </div>
-                        <p class="project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde.</p>
+                        <p class="project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam minus quo qui velit ab. Qui blanditiis quasi, odit nostrum distinctio, vitae modi, eius perspiciatis quam atque exercitationem. Consectetur, accusantium suscipit?</p>
                         <a href="#" class="project__link">Learn more</a>
                     </div>
 
