add comment attribution for eyeglasses icon

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <button class="navbar__btn">
                 <!-- Sunglasses icons created by Rohim - Flaticon -->
                 <img src="img/sunglasses.png" alt="Dark/light mode button">
+                <!-- Reading eyeglasses icon created by Freepik - Flaticon -->
             </button>
             <ul class="navbar__menu">
                 <li class="navbar__menu-item">
