add light mode button icon

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
             <img src="img/coding.png" alt="Site logo" class="navbar__logo">
             <button class="navbar__btn">
                 <!-- Sunglasses icons created by Rohim - Flaticon -->
-                <img src="img/sunglasses.png" alt="Dark/light mode button">
+                <img src="img/sunglasses.png" alt="Dark mode button">
                 <!-- Reading eyeglasses icon created by Freepik - Flaticon -->
+                <img src="img/reading-eyeglasses.png" alt="Light mode button">
             </button>
             <ul class="navbar__menu">
                 <li class="navbar__menu-item">
