--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <img src="img/coding.png" alt="Site logo" class="navbar__logo">
             <button class="navbar__btn">
                 <!-- Sunglasses icons created by Rohim - Flaticon -->
-                <img src="img/sunglasses.png" alt="Dark mode button">
+                <img src="img/sunglasses.png" alt="Dark mode button" id="dark-btn">
                 <!-- Reading eyeglasses icon created by Freepik - Flaticon -->
-                <img src="img/reading-eyeglasses.png" alt="Light mode button">
+                <img src="img/reading-eyeglasses.png" alt="Light mode button" id="light-btn">
             </button>
             <ul class="navbar__menu">
                 <li class="navbar__menu-item">
