--- a/index.html
+++ b/index.html
@@ -18,16 +18,42 @@
 <body class="container dark-mode">
 
     <!-- NAVBAR -->
-    <header>
-        <nav class="navbar">
-            <!-- Web development icons created by surang - Flaticon -->
-            <img src="img/coding.png" alt="Site logo" class="navbar__logo">
-            <button class="navbar__btn">
-                <!-- Sunglasses icons created by Rohim - Flaticon -->
-                <img src="img/sunglasses.png" alt="Dark mode button" id="dark-btn">
-                <!-- Reading eyeglasses icon created by Freepik - Flaticon -->
-                <img src="img/reading-eyeglasses.png" alt="Light mode button" id="light-btn">
-            </button>
+    <header class="header">
+
+        <div class="navigation">
+
+            <input 
+                type="checkbox" 
+                id="nav-toggle" 
+                class="navigation__checkbox"
+            />
+
+            <label for="nav-toggle" class="navigation__button">
+                <span class="navigation__icon"></span>
+            </label>
+
+            <div class="navigation__background"></div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Home</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">About</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Projects</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
+
+        <!-- <nav class="navbar">
             <ul class="navbar__menu">
                 <li class="navbar__menu-item">
                     <a href="#home" class="navbar__menu-link active">Home</a>
@@ -45,7 +71,19 @@
                     <a href="#contact" class="navbar__menu-link">Contact</a>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
+
+        <div class="header__logo">
+            <img src="img/signature.png" alt="My signature">
+        </div>
+
+        <button class="toggle-btn">
+            <!-- Sunglasses icons created by Rohim - Flaticon -->
+            <img src="img/sunglasses.png" alt="Dark mode button" id="dark-btn" style="display: none;">
+            <!-- Reading eyeglasses icon created by Freepik - Flaticon -->
+            <img src="img/reading-eyeglasses.png" alt="Light mode button" id="light-btn">
+        </button>
+
     </header>
 
     <main>
@@ -53,9 +91,15 @@
         <!-- HOME -->
         <section class="home" id="home">
 
+            <div class="home__img">
+                <img src="img/self-dark-mode.png" alt="My picture">
+            </div>
+
             <div class="home__data">
 
-                <p class="glitch">
+
+
+                <!-- <p class="glitch">
                     <span aria-hidden="true">Hello World, I'm Don</span>
                     Hello World, I'm Don
                     <span aria-hidden="true">Hello World, I'm Don</span>
@@ -64,7 +108,7 @@
                 <div class="typewriter">
                     <div class="text"></div>
                     <div class="cursor"></div>
-                </div>
+                </div> -->
 
                 <div class="home__social">
                     <a href="https://github.com/dreniff3">
@@ -77,14 +121,10 @@
 
             </div>
 
-            <div class="home__img">
-                <img src="img/self.JPG" alt="My picture">
-            </div>
-
         </section>
 
         <!-- ABOUT -->
-        <section class="about reveal" id="about">
+        <!-- <section class="about reveal" id="about">
             <h2 class="section-title">About</h2>
             <div class="about__container">
                 <img src="img/self-3.JPG" alt="My other picture">
@@ -92,10 +132,10 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, accusamus, ad necessitatibus impedit quaerat vitae placeat earum dignissimos eum laborum, quo consequatur. Fuga architecto laudantium exercitationem ad quibusdam perferendis voluptatem?
                 </p>
             </div>
-        </section>
+        </section> -->
 
         <!-- SKILLS -->
-        <section class="skills reveal" id="skills">
+        <!-- <section class="skills reveal" id="skills">
             <h2 class="section-title">Skills</h2>
             <div class="skills__container">
 
@@ -157,10 +197,10 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
 
         <!-- PROJECTS -->
-        <div class="projects reveal" id="projects">
+        <!-- <div class="projects reveal" id="projects">
             <h2 class="section-title">Projects</h2>
 
             <div class="projects__container">
@@ -203,11 +243,10 @@
             </div>
         </div>
 
-    </main>
+    </main> -->
 
-    <!-- CONTACT -->
-    <footer class="contact" id="contact">
-        Contact me
+    <footer class="footer" id="footer">
+        &copy; Donald Reniff 2022
     </footer>
 
 </body>
