edit styles and positions for home page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
         <section class="home" id="home">
 
             <div class="home__img">
-                <img src="img/self-dark-mode.png" alt="My picture">
+                <img src="img/self-dark-mode.png" alt="My picture" id="dark-image">
+                <img src="img/self-light-mode.png" alt="My picture" id="light-image" style="display: none;">
+
             </div>
 
             <div class="home__data">
@@ -246,7 +248,7 @@
     </main> -->
 
     <footer class="footer" id="footer">
-        &copy; Donald Reniff 2022
+        <p>&copy; Donald Reniff 2022</p>
     </footer>
 
 </body>
