edit positioning of home elements

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     
     <!-- Code icons created by Icongeek26 - Flaticon -->
     <link rel="shortcut icon" type="image/png" href="img/web-programming.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pangolin">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js" defer></script>
     <title>Don Reniff &mdash; Full Stack Web Developer</title>
@@ -91,15 +88,23 @@
         <!-- HOME -->
         <section class="home" id="home">
 
-            <div class="home__img">
+            <!-- <div class="home__img">
                 <img src="img/self-dark-mode.png" alt="My picture" id="dark-image">
                 <img src="img/self-light-mode.png" alt="My picture" id="light-image" style="display: none;">
 
-            </div>
+            </div> -->
 
             <div class="home__data">
-
-
+                <div class="home__data--img">
+                    <img src="img/self-dark-mode.png" alt="My picture" id="dark-image">
+                    <img src="img/self-light-mode.png" alt="My picture" id="light-image" style="display: none;">
+    
+                </div>
+                <div class="home__data--name">
+                    <h1>
+                        I'm Don Reniff
+                    </h1>
+                </div>
 
                 <!-- <p class="glitch">
                     <span aria-hidden="true">Hello World, I'm Don</span>
@@ -112,7 +117,7 @@
                     <div class="cursor"></div>
                 </div> -->
 
-                <div class="home__social">
+                <div class="home__data--social">
                     <a href="https://github.com/dreniff3">
                         <img src="img/GitHub_Logo.png" alt="Github logo">
                     </a>
