--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <nav class="navigation__nav">
                 <ul class="navigation__list">
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">Home</a>
+                        <a href="index.html" class="navigation__link">Home</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">About</a>
+                        <a href="about.html" class="navigation__link">About</a>
                     </li>
                     <li class="navigation__item">
                         <a href="#" class="navigation__link">Projects</a>
