--- a/about.html
+++ b/about.html
@@ -40,10 +40,10 @@
                         <a href="about.html" class="navigation__link">About</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">Projects</a>
+                        <a href="projects.html" class="navigation__link">Projects</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">Contact</a>
+                        <a href="contact.html" class="navigation__link">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -241,6 +241,10 @@
 
         </div>
     </main>
+
+    <footer class="footer" id="about__footer">
+        <p>&copy; Donald Reniff 2022</p>
+    </footer>
 
 </body>
 </html>
