add empty stars to skill rating section

--- a/about.html
+++ b/about.html
@@ -135,27 +135,27 @@
                                 />
                                 <input 
                                     type="text"
-                                    value="CSS/Sass &starf;&starf;&starf;&starf;"
+                                    value="CSS/Sass &starf;&starf;&starf;&starf;&star;"
                                     readonly
                                 />
                                 <input 
                                     type="text"
-                                    value="JavaScript &starf;&starf;&starf;"
+                                    value="JavaScript &starf;&starf;&starf;&star;&star;"
                                     readonly
                                 />
                                 <input 
                                     type="text"
-                                    value="Node.js &starf;&starf;&starf;"
+                                    value="Node.js &starf;&starf;&starf;&star;&star;"
                                     readonly
                                 />
                                 <input 
                                     type="text"
-                                    value="React &starf;&starf;&starf;"
+                                    value="React &starf;&starf;&starf;&star;&star;"
                                     readonly
                                 />
                                 <input 
                                     type="text"
-                                    value="Git &starf;&starf;&starf;&starf;"
+                                    value="Git &starf;&starf;&starf;&starf;&star;"
                                     readonly
                                 />
                                 <input 
@@ -165,17 +165,17 @@
                                 />
                                 <input 
                                     type="text"
-                                    value="Flask &starf;&starf;&starf;"
+                                    value="Flask &starf;&starf;&starf;&star;&star;"
                                     readonly
                                 />
                                 <input 
                                     type="text"
-                                    value="Express.js &starf;&starf;&starf;"
+                                    value="Express.js &starf;&starf;&starf;&star;&star;"
                                     readonly
                                 />
                                 <input 
                                     type="text"
-                                    value="MongoDB &starf;&starf;&starf;"
+                                    value="MongoDB &starf;&starf;&starf;&star;&star;"
                                     readonly
                                 />
                             </div>
