add styles to projects page

--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,39 @@
 
     <main>
 
-        
+        <div class="projects">
+
+            <div class="projects__nav">
+                <ul class="projects__nav--list">
+                    <li class="projects__nav--item">
+                        <a href="#">DreamOffer</a>
+                    </li>
+                    <li class="projects__nav--item">
+                        <a href="#">Exercise Log</a>
+                    </li>
+                    <li class="projects__nav--item">
+                        <a href="#">Python Battleship</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="projects__container">
+                <div class="project" style="display: none;">
+                    <div class="project__image">
+                        <img src="img/battleship.png" alt="Battleship project img" class="project__img">
+                    </div>
+                    <div class="project__data">
+                        <h4 class="project--title">Battleship <a href="https://github.com/dreniff3/python-battleship-with-gui"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
+                        <div class="project--stack">
+                            <span class="project--stack-item">Python</span>
+                        </div>
+                        <p class="project--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, rem. Reprehenderit cum at illo, tempore, voluptatibus veniam unde dolores ratione cupiditate impedit et explicabo rem quis minus animi in. Similique!</p>
+                        <a href="#" class="project--link">Learn more</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
     </main>
 
