--- a/projects.html
+++ b/projects.html
@@ -70,19 +70,60 @@
             <div class="projects__nav">
                 <ul class="projects__nav--list">
                     <li class="projects__nav--item">
-                        <a href="#">DreamOffer</a>
+                        <a href="#" onclick="showProject('dreamoffer')">DreamOffer</a>
                     </li>
                     <li class="projects__nav--item">
-                        <a href="#">Exercise Log</a>
+                        <a href="#" onclick="showProject('exerciselog')">Exercise Log</a>
                     </li>
                     <li class="projects__nav--item">
-                        <a href="#">Python Battleship</a>
+                        <a href="#" onclick="showProject('battleship')">Python Battleship</a>
                     </li>
                 </ul>
             </div>
 
             <div class="projects__container">
-                <div class="project" style="display: none;">
+
+                <!-- DreamOffer -->
+                <div class="project" id="dreamoffer" style="display: none;">
+                    <div class="project__image">
+                        <img src="img/cs340_project_img3.png" alt="DreamOffer project img" class="project__img">
+                    </div>
+                    <div class="project__data">
+                        <h4 class="project--title">DreamOffer <a href="https://github.com/sophlil/DreamOffer"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
+                        <div class="project--stack">
+                            <span class="project--stack-item">HTML</span> |
+                            <span class="project--stack-item">CSS</span> |
+                            <span class="project--stack-item">JavaScript</span> |
+                            <span class="project--stack-item">Python</span> |
+                            <span class="project--stack-item">Flask</span> |
+                            <span class="project--stack-item">MySQL</span>
+                        </div>
+                        <p class="project--text">DreamOffer is a Job Application Tracking database driven web application that helps applicants keep track of where they have applied and when their applications were submitted in an organized and simple to use system. <a href="https://dream-offer.herokuapp.com/" class="project--link">Learn more</a></p>
+                    </div>
+                </div>
+
+                <!-- Exercise Log -->
+                <div class="project" id="exerciselog" style="display: none;">
+                    <div class="project__image">
+                        <img src="img/battleship.png" alt="Battleship project img" class="project__img">
+                    </div>
+                    <div class="project__data">
+                        <h4 class="project--title">Exercise Log <a href="#"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
+                        <div class="project--stack">
+                            <span class="project--stack-item">HTML</span> |
+                            <span class="project--stack-item">CSS</span> |
+                            <span class="project--stack-item">JavaScript</span> |
+                            <span class="project--stack-item">React</span> |
+                            <span class="project--stack-item">Node.js</span> |
+                            <span class="project--stack-item">Express.js</span> |
+                            <span class="project--stack-item">MongoDB</span>
+                        </div>
+                        <p class="project--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="project--link">Learn more</a></p>
+                    </div>
+                </div>
+
+                <!-- Battleship -->
+                <div class="project" id="battleship" style="display: none;">
                     <div class="project__image">
                         <img src="img/battleship.png" alt="Battleship project img" class="project__img">
                     </div>
@@ -91,10 +132,10 @@
                         <div class="project--stack">
                             <span class="project--stack-item">Python</span>
                         </div>
-                        <p class="project--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, rem. Reprehenderit cum at illo, tempore, voluptatibus veniam unde dolores ratione cupiditate impedit et explicabo rem quis minus animi in. Similique!</p>
-                        <a href="#" class="project--link">Learn more</a>
+                        <p class="project--text">A Python program that allows two people to play the game Battleship, originally created as a school project, meant to be played in the terminal. During a break between quarters, I implemented a simple GUI for the game using Tkinter. <a href="#" class="project--link">Learn more</a></p>
                     </div>
                 </div>
+
             </div>
 
         </div>
